<resources>
    <string name="app_name">BoulderProgression</string>
    <string name="main_startSession">Start Session</string>
    <string name="txt_main_viewLog">View Log</string>
    <string name="AppName">BoulderProgression</string>
    <string name="button_log_txt">Log</string>
    <string name="popup_grade">Grade</string>
    <string name="popup_title">Add Problem</string>
    <string name="label_vsum">Sum</string>
    <string name="label_vavg">AVG</string>
    <string name="label_vden">DEN</string>
    <string name="title_activity_log_temp">activity_log_temp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
