<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity_Main"
    >


    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        android:text="@string/main_startSession"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_gravity="center"
        android:onClick="onClick_startSession"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_main_viewLog"
        android:layout_gravity="center"
        android:onClick="onClick_viewLog"
 />

</LinearLayout>